--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^2.12",
+        "spatie/laravel-activitylog": "^4.7",
         "yajra/laravel-datatables": "^10.1"
     },
     "require-dev": {
